# CUDA_Freshman

./: .gitignore  CMakeLists.txt  cmake_cmd.sh
src/: CMakeLists.txt
src/100_calculate_std/: CMakeLists.txt  std_cpu.h  std_gpu.cu  std_gpu.h  to_string.h
test/: CMakeLists.txt
test/100_calculate_std/: CMakeLists.txt
test/100_calculate_std/it/: CMakeLists.txt  it_std_cpu.cpp  it_std_gpu.cpp
test/100_calculate_std/ut/: CMakeLists.txt  ut_std_cpu.cpp  ut_std_gpu.cpp
